--- a/react_image_finder/src/App.css
+++ b/react_image_finder/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+#Search-bar-container{
+  margin: 0px 50px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
